--- a/gitlab/Dockerfile
+++ b/gitlab/Dockerfile
@@ -2,7 +2,7 @@ FROM gitlab/gitlab-ce:12.6.7-ce.0
 
 RUN \
 	apt-get update && \
-	apt-get install -y awscli && \
+	apt-get install -y awscli jq && \
 	rm -rf /var/lib/apt/lists/*
 
 COPY start.sh /
